Prototype for handling images
instead of fetching the raw image bytes
(probably to often)
return an url to the image
and maybe not just one url but several in different sizes
so the client side can choose one depending on
purpose, device etc etc
